<resources>
    <string name="app_name">CalculMental</string>
    <string name="message_valeur_trop_grande"> Valeur trop grande</string>
    <string name="message_bonne_reponse">"Bonne réponse !"</string>
    <string name="message_mauvaise_reponse">Mauvaise réponse !</string>
    <string name="message_perdu">VOUS AVEZ PERDU !</string>
    <string name="toolbar_texte_score">Score</string>
    <string name="toolbar_texte_vie">Vies</string>
    <string name="viesRestantes">\"Vies restantes: \"</string>
    <string name="votreScoreEstDe">\"votre score est de : \"</string>
    <string name="VousAvezPerdu">Vous avez perdu !</string>
    <string name="effacer">EFFACER</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="valider">VALIDER</string>
    <string name="_minus">(-)</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="r_ponse">Réponse</string>
    <string name="_12_8">12+8</string>
    <string name="question">Question</string>
    <string name="vies_restantes_3">Vies restantes: 3</string>
    <string name="score_0">Score: 0</string>
    <string name="nouvelle_partie">Nouvelle Partie</string>
    <string name="propos">à propos</string>
    <string name="records">Records</string>
    <string name="highscore">HighScore</string>
    <string name="hikoro_10">Hikoro: 10</string>
    <string name="dududess_10">Dududess: 10</string>
    <string name="aypierre_9">Aypierre: 9</string>
    <string name="revenir_au_menu">Revenir au menu</string>
</resources>